# 42-python-modules

p02/ex0/: ft_first_exception.py
p02/ex1/: ft_different_errors.py
p02/ex2/: ft_custom_errors.py
p02/ex3/: ft_finally_block.py
p02/ex4/: ft_raise_errors.py
p02/ex5/: ft_garden_management.py
p03/ex0/: ft_command_quest.py
p03/ex1/: ft_score_analytics.py
p03/ex2/: ft_coordinate_system.py
p03/ex3/: ft_achievement_tracker.py
p03/ex4/: ft_inventory_system.py
p03/ex5/: ft_data_stream.py
p03/ex6/: ft_analytics_dashboard.py
p04/ex0/: ft_ancient_text.py
p04/ex1/: ft_archive_creation.py
p04/ex2/: ft_stream_management.py
p04/ex3/: ft_vault_security.py
p04/ex4/: ft_crisis_response.py
p05/ex0/: stream_processor.py
p05/ex1/: data_stream.py
p05/ex2/: nexus_pipeline.py
p06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
p06/alchemy/: potions.py
p07/ex0/: Card.py  CreatureCard.py  main.py
p07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
p07/ex2/: EliteCard.py  main.py
p07/ex3/: AggressiveStrategy.py  FantasyCardFactory.py  GameEngine.py  main.py
p07/ex4/: TournamentCard.py  TournamentPlatform.py  main.py
p08/ex0/: construct.py
p08/ex1/: loading.py  pyproject.toml  requirements.txt
p08/ex2/: .env.example  oracle.py
p09/ex0/: space_station.py
p09/ex1/: alien_contact.py
p09/ex2/: space_crew.py
p10/ex0/: lambda_spells.py
p10/ex1/: higher_magic.py
p10/ex2/: scope_mysteries.py
p10/ex3/: functools_artifacts.py
p10/ex4/: decorator_mastery.py
(+2 files in other folders)
