[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Training program for virtual environments"

[tool.poetry.dependencies]
python = "^3.10"
contourpy = "1.3.2"
cycler = "0.12.1"
fonttools = "4.61.1"
kiwisolver = "1.4.9"
matplotlib = "3.10.8"
numpy = "2.2.6"
packaging = "26.0"
pandas = "2.3.3"
pillow = "12.1.1"
pyparsing = "3.3.2"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
six = "1.17.0"
tzdata = "2025.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
